# sudoku-trainer

./: .env  Makefile  README.md  pyproject.toml
app/: llm.py  main.py  models.py  solver.py  tutor.py
static/: index.html
static/css/: style.css
static/js/: app.js  chat.js  grid.js  skills.js
